[gd_scene load_steps=5 format=3 uid="uid://q1e3cdfeuchs"]

[ext_resource type="Script" uid="uid://dugdffkbp3mf0" path="res://template/menus/visual/visual.gd" id="1_gjquy"]
[ext_resource type="StyleBox" uid="uid://vhcj77i77ef8" path="res://template/resources/black_white_panel.tres" id="2_3ts6r"]
[ext_resource type="PackedScene" uid="uid://v2utitgdq37h" path="res://template/action_button/action_button.tscn" id="2_r7x5j"]
[ext_resource type="Script" uid="uid://bxb2pq07dpsc0" path="res://scripts/popup_animation.gd" id="2_wdpdf"]

[node name="Visual" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjquy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -72.0
offset_right = 160.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VISUAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("2_3ts6r")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DisplayBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(270, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/DisplayBox"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "DISPLAY"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/DisplayBox"]
layout_mode = 2
size_flags_horizontal = 2
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Display" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/DisplayBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(204, 32)
layout_mode = 2
size_flags_horizontal = 6
focus_neighbor_top = NodePath("../../../../BackToOptions")
theme_override_font_sizes/font_size = 16
text = "FULLSCREEN"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/DisplayBox/Display"]
script = ExtResource("2_wdpdf")

[node name="VSyncBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VSyncBox"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "VSYNC"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/VSyncBox"]
layout_mode = 2
size_flags_horizontal = 3
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSync" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/VSyncBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "ON"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/VSyncBox/VSync"]
script = ExtResource("2_wdpdf")

[node name="ScreenShakeBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(196, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/ScreenShakeBox"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SCREENSHAKE"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label6" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/ScreenShakeBox"]
layout_mode = 2
size_flags_horizontal = 3
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScreenShake" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/ScreenShakeBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "ON"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/ScreenShakeBox/ScreenShake"]
script = ExtResource("2_wdpdf")

[node name="FlashBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(196, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Label9" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/FlashBox"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "FLASH"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label10" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/FlashBox"]
layout_mode = 2
size_flags_horizontal = 3
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flash" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/FlashBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "ON"

[node name="AnimationComponent" type="Node" parent="VBoxContainer/PanelContainer/VBoxContainer/FlashBox/Flash"]
script = ExtResource("2_wdpdf")

[node name="BackToOptions" parent="VBoxContainer" instance=ExtResource("2_r7x5j")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../PanelContainer/VBoxContainer/DisplayBox/Display")
text = "BACK"
